--- a/Homework1/assignment 1 template.Rmd
+++ b/Homework1/assignment 1 template.Rmd
@@ -4,7 +4,13 @@ author: "My Name"
 output: html_document
 ---
 
-My favorite distribution is $$F\left(x\right)=$$
+My favorite distribution is $$F\left(x\right)=\begin{cases}
+0 & \text{para } x < 0 \\
+x^2 & \text{para } 0 \leq x \leq 1 \\
+1 & \text{para } x > 1
+\end{cases}
+$$
+
 For this assignment I'm using parameter values .....
 
 Let's take a sample of size 100 from that distribution:
