--- a/Homework2/assignment 2.Rmd
+++ b/Homework2/assignment 2.Rmd
@@ -1,3 +1,9 @@
+---
+title: "Estimation and Hypothesis Testing"
+author: "Brayan Duran Medina"
+output: html_document
+---
+
 # Importing libraries
 ```{r}
 library(readxl)
