Update summary report on statistical analysis of GSS 2014 data

--- a/Homework2/assignment 2.Rmd
+++ b/Homework2/assignment 2.Rmd
@@ -97,17 +97,17 @@ for (var in significant_variables) {
 }
 ```
 
-## Summary Report on the Statistical Analysis of GSS 2014 Data
+# Summary Report on the Statistical Analysis of GSS 2014 Data
 
-# Objective
+## Objective
 
 The objective of this analysis was to assess the impact of various demographic factors on scientific knowledge as indicated by the number of correct science answers in the General Social Survey (GSS) 2014 data.
 
-# Methodology
+## Methodology
 
 Analysis of Variance (ANOVA) was employed to evaluate the influence of demographic variables on scientific literacy. The variables included respondents' sex, race, number of children, educational attainment, sexual orientation, and income. Significant findings were further explored using Post Hoc tests.
 
-# Key Findings
+## Key Findings
 
 Respondent's Sex: A significant difference in scientific knowledge was observed between males and females.
 
@@ -121,6 +121,6 @@ Sexual Orientation: Variations in scientific literacy were evident across differ
 
 Income Levels: Respondents' income levels significantly influenced their scientific literacy.
 
-# Conclusions
+## Conclusions
 
 The analysis confidently suggests that demographic factors, namely sex, race, number of children, education, sexual orientation, and income level, play a significant role in determining the level of scientific knowledge among individuals. These insights are crucial for formulating targeted educational strategies and public awareness campaigns to enhance scientific literacy across diverse demographic segments.
