--- a/Homework2/assignment 2.Rmd
+++ b/Homework2/assignment 2.Rmd
@@ -87,7 +87,9 @@ for (var in demographic_variables) {
 
   print(summary(anova_result))
 
-  boxplot(data_2014$correct_answers ~ data_2014[[var]], main=paste("Boxplot of Correct Answers by", var), xlab=var, ylab="Number of Correct Answers", col="lightgreen")
+  boxplot(data_2014$correct_answers ~ data_2014[[var]],
+          main = paste("Boxplot of Correct Answers by", var),
+          xlab = var, ylab = "Number of Correct Answers", col = "lightgreen")
 
   if (summary(anova_result)[[1]][["Pr(>F)"]][1] < 0.05) {
 
