--- a/Homework3/assignment 3.Rmd
+++ b/Homework3/assignment 3.Rmd
@@ -93,9 +93,65 @@ for (var in column_names) {
 }
 ```
 
-# 2) Box-Cox transformation
+# 2) Create the model
 ```{r}
-for (var in column_names) {
-  data[[var]] <- boxcox(data[[var]], lambda = 0)
+data <- data.frame(lapply(data, as.numeric))
+
+lm_model <- lm(price ~ ., data = data)
+```
+
+# 3) Plot the residuals
+```{r}
+residuals_data <- residuals(lm_model)
+
+plot(residuals_data, main = "Residuals of the model")
+abline(h = 0, col = "red")
+```
+
+# 4) Kolmogorov-Smirnov test
+```{r}
+library(ggplot2)
+
+residuals_data_standardized <- scale(residuals_data)
+ks_test_residuals <- ks.test(residuals_data_standardized, "pnorm")
+
+print(ks_test_residuals)
+
+data <- data.frame(lapply(data, as.numeric))
+
+ks_results <- list()
+
+for (var in names(data)) {
+  p <- ggplot(data, aes_string(x = var)) +
+    geom_histogram(bins = 30, fill = "blue", color = "black") +
+    ggtitle(paste("Histogram of", var))
+  print(p)
+
+  data_standardized <- scale(data[[var]])
+
+  ks_results[[var]] <- ks.test(data_standardized, "pnorm")
+}
+
+ks_results
+```
+
+# 5) Box-Cox Transformation
+```{r}
+for (var in names(data)) {
+  if (ks_results[[var]]$p.value < 0.05) {
+    if (all(data[[var]] > 0)) {
+      fmla <- as.formula(paste(var, "~ ."))
+
+      bc_result <- boxcox(lm(fmla, data = data))
+      lambda_optimal <- bc_result$x[which.max(bc_result$y)]
+
+      data[[paste(var, "boxcox", sep = "_")]] <-
+        (data[[var]]^lambda_optimal - 1) / lambda_optimal
+    } else {
+      message(paste("The variable",
+                    var,
+                    "contains non-positivevalues and Box-Cox was not applied."))
+    }
+  }
 }
 ```
